comment the restore button as it need more testing

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -335,18 +335,21 @@
     </fieldset>
 
     <fieldset>
-        <legend>Backup & Restore</legend>
+        <!--<legend>Backup & Restore</legend>-->
+        <legend>Backup</legend>
         <div class="large-3 columns">
             <div class="row collapse">
                 <a id="btn-backup"  class="button radius small">Backup the configuration</a>
             </div>
         </div>
+        <!--
         <div class="large-7 columns">
             <div class="row collapse">
                 <input type="file" id="restore_conf_file" class="hidden">
                 <a id="btn-restore"  class="button radius small">Restore the configuration</a>
             </div>
         </div>
+        -->
     </fieldset>
 
 
