--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -151,11 +151,17 @@
 	ghostClass: 'ghost',
 	chosenClass: 'chosen', 
 	dataIdAttr: 'data-id',
+	delay: function (){
+		console.log(1000);
+		return 10000;
+	},
 	animation: 150,
 	filter: ".cancel, .preview, .edit, .download, .play-button, .previewJob, .editJob, .downloadJob, .deleteJob, .ellipses",  
 	onStart: function(evt) {
 		var remove = document.getElementById('actions');	
 		remove.parentNode.removeChild(remove);
+		var ctrl =  evt.item;
+		ctrl.removeAttribute("style");
 	},
 	onFilter: function (evt) {
         var item = evt.item,
@@ -273,6 +279,9 @@
 	setupDropTarget();
 
 	$('#queue_table').on('mousedown', '.job_item:first-child', function(e) {
+		$('#queue_table').on('mousedown', '#actions', function(e){
+			e.stopPropagation();
+		});
 		if ($(window).width() > 630 ){
 			var left = e.pageX - (145/2);
 			var right = $(document).width() - e.pageX - (145/2);
