--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -98,7 +98,7 @@
                     c-26.197,0.908-50.475-20.825-52.772-46.88C199.991,368.194,221.382,340.808,248.781,337.651z"/>
                   </svg>
                 </div>
-                <div id="tool-name" style="padding-left: 10px" class="noselect">
+                <div id="tool-name" style="padding-left: 10px" class="noselect show-for-medium-up">
                 &nbsp;
                 </div>
 
@@ -106,7 +106,7 @@
             </section>
 
             <!-- ***** Tool Position Section ***** -->
-            <section class="right show-for-medium-up fabmo-status" id="right-position-container">
+            <section class="right show-for-small-up fabmo-status" id="right-position-container">
             <div style="display: table-row;">
                 <div class="xaxis" style="display: table-cell; padding-right: 1em"><label>X : <span class="posx">X.XXX</span></label></div>
                 <div class="yaxis" style="display: table-cell; padding-right: 1em"><label>Y : <span class="posy">Y.YYY</span></label></div>
