--- a/dashboard/apps/previewer.fma/index.html
+++ b/dashboard/apps/previewer.fma/index.html
@@ -47,42 +47,56 @@
 
   <script>
     var fabmo = new FabMoDashboard();
+    var viewer;
+
+    /**
+     * Initializes the viewer object.
+     * @param {string} gcode The G-Code to display.
+     * @param {boolean} isLive Sets if the G-Code should be displayed live.
+     */
+    function initializeViewer(gcode, isLive) {
+      var width = window.innerWidth;
+      var height = window.innerHeight - $("#topbar").height()
+      $('#preview').size(width, height);
+      viewer = new GCodeViewer.Viewer(
+        document.getElementById("preview"),
+        width,
+        height,
+        function(msg) { fabmo.notify('warning', msg); },
+        { hideGCode : true },
+        isLive
+      );
+      if(gcode !== "") {
+        viewer.setGCode(gcode);
+      }
+    }
 
     $(document).ready(function() {
-
       $(document).foundation();
-      var viewer = new GCodeViewer.Viewer(
-        document.getElementById("preview"),
-        100,
-        100,
-        function(msg) { fabmo.notify('warning', msg); },
-        {
-          hideGCode : true
-        }
-      );
 
       fabmo.getAppArgs(function(err, args) {
         if('job' in args) {
           var url = '/job/' + args.job + '/gcode';
           $.get(url,function(data, status) {
-              viewer.setGCode(data);
+            var isLive = ('live' in args) ? args.live : false;
+            initializeViewer(data, isLive);
           });
+        } else {
+          initializeViewer("", false);
         }
       });
 
       function resize() {
-        var w = window.innerWidth;
-        var h = window.innerHeight - $("#topbar").height()
-        $('#preview').size(w,h);
-        viewer.resize(w,h);
+        var width = window.innerWidth;
+        var height = window.innerHeight - $("#topbar").height()
+        $('#preview').size(width, height);
+        viewer.resize(width, height);
       }
 
       $(window).resize(function(){
         console.info('resizing')
         resize();
       });
-
-      resize();
     });
   </script>
 
