Launching automatically the live viewer (for test purpose).

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -199,7 +199,7 @@
 			} else if (Sortable.utils.is(ctrl, ".ellipses")){
 				console.log(ctrl);
 				var dd = ctrl.parentNode.childNodes[2];
-				var cd = ctrl.parentNode.childNodse[1];
+				var cd = ctrl.parentNode.childNodes[1];
 				 $('.dropDownWrapper').show();
     			dd.style.display = 'block';
 				cd.style.display = 'block';
