Remove the f that looks like a d.  Replace with a gear.

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -4,6 +4,26 @@
     <meta charset="utf-8" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>FabMo Dashboard</title>
+
+    <!-- Favicon stuff -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/img/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/foundation.min.css" />
@@ -43,37 +63,6 @@
       <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
 
-<!--
-          <div class="load_container">
-              <div class="loading_bar">
-                <div class="horizontal_fill">
-                </div>
-              </div>
-              <div class="percent_comp">10%</div>
-              <div class="elapsed_time">
-                  <p class="elapsed_time_label"><i class="fa fa-clock-o" aria-hidden="true"></i> :  <p>
-                  <p class="elapsed_time_text">0s</p>
-               </div>
-           </div>
-
-
-          <span class='fabmo-pause-button'>
-            <div class='pauseJob'>
-              <p>STOP</p>
-              <div class='pauseJobInner'>
-
-              </div>
-            </div>
-          </span>
-
-          <span class='fabmo-resume-stop'>
-            <div class='resumeJob'>RESUME</div>
-            <div class='stopJob'>QUIT</div>
-          </span>
-
-          </div>
-        -->
-          <!-- New nav work -->
           <!-- Nav-Bar & Buttons for sliding menus -->
           <nav class="tab-bar">
 
@@ -332,7 +321,7 @@
 
             <h3 class="modalTitle">Title</h3>
             <div class="modalSubContent">
-              <h4 class="modalDialogue"> blah blah blah this is some text to tell you why you are getting a modal</h4>
+              <h4 class="modalDialogue">&nbsp;</h4>
               <div class="modalImage">
                 <img src="img/icon_social.png">
               </div>
