--- a/dashboard/apps/previewer.fma/index.html
+++ b/dashboard/apps/previewer.fma/index.html
@@ -50,11 +50,27 @@
     var viewer;
 
     /**
+     * Initializes the handler for updating the live viewer.
+     * @param {number} jobId The job id.
+     */
+    function initializeLiveViewerHandler(jobId) {
+      fabmo.on("status", function(stat) {
+        if(stat.state !== "running") {
+            return;
+        }
+        if(stat.job && stat.job._id === jobId) {
+          viewer.livePreview(stat.line);
+        }
+      });
+    }
+
+    /**
      * Initializes the viewer object.
      * @param {string} gcode The G-Code to display.
      * @param {boolean} isLive Sets if the G-Code should be displayed live.
+     * @param {number} jobId The job id.
      */
-    function initializeViewer(gcode, isLive) {
+    function initializeViewer(gcode, isLive, jobId) {
       var width = window.innerWidth;
       var height = window.innerHeight - $("#topbar").height()
       $('#preview').size(width, height);
@@ -69,6 +85,10 @@
       if(gcode !== "") {
         viewer.setGCode(gcode);
       }
+
+      if(isLive) {
+          initializeLiveViewerHandler(jobId);
+      }
     }
 
     $(document).ready(function() {
@@ -79,16 +99,10 @@
           var url = '/job/' + args.job + '/gcode';
           $.get(url,function(data, status) {
             var isLive = ('isLive' in args) ? args.isLive : false;
-            initializeViewer(data, isLive);
+            initializeViewer(data, isLive, args.job);
           });
-
-          fabmo.getJobInfo(args.job, function(err, job) {
-              console.log("Viewer job:");
-              console.log(job);
-          });
-
         } else {
-          initializeViewer("", false);
+          initializeViewer("", false, -1);
         }
       });
 
