run recent jobs without going into history no select on buttons

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/css/normalize.css">
 	<link rel="stylesheet" href="/css/foundation.min.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/font-awesome.min.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -54,6 +55,10 @@
 							<div class="small-11 columns">
 								<h5 class='add-job-please'></h5>
 							</div>
+						</div>
+						<hr>
+						<h5 class='no-job'>Recent Jobs</h5>
+						<div id="recent">
 						</div>
 					</div>
 				</div>
