--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -323,7 +323,7 @@
             <div class="modalSubContent">
               <h4 class="modalDialogue">&nbsp;</h4>
               <div class="modalImage">
-                <img src="img/icon_social.png">
+                <img src="">
               </div>
           </div>
           <div class="modalButtons">
