--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -86,6 +86,10 @@
   <script src="/js/libs/foundation.min.js" type="text/javascript"></script>
   <script src="js/codemirror.js" type="text/javascript"></script>
   <script src="js/simple.js" type="text/javascript"></script>
+  <script src="js/cm-addons/search.js" type="text/javascript"></script>
+  <script src="js/cm-addons/searchcursor.js" type="text/javascript"></script>
+  <script src="js/cm-addons/jump-to-line.js" type="text/javascript"></script>
+  <script src="js/cm-addons/dialog.js" type="text/javascript"></script>
   <script src="js/cm-fabmo-modes.js" type="text/javascript"></script>
 
   <script>
