--- a/authentication/authentication.html
+++ b/authentication/authentication.html
@@ -1,4 +1,4 @@
-<html>
+<!--<html>
   <head>
     <meta charset="utf-8">
     <title>Dashboard login</title>
@@ -171,4 +171,4 @@
 
   </script>
   </body>
-</html>
+</html>-->
