--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -3,10 +3,10 @@
 	<meta charset="utf-8">
 	<title>Job Manager</title>
 
-	<link rel="stylesheet" href="/css/normalize.css">
-	<link rel="stylesheet" href="/css/foundation.min.css">
+	<!--<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="/css/foundation.min.css">-->
 	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="./css/font-awesome.min.css">
+	<!--<link rel="stylesheet" href="/css/font-awesome.min.css">-->
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -136,12 +136,12 @@
 </div>
 
   <!-- Javascript inclusions -->
-  <script src="/js/libs/jquery.min.js"></script>
-  <script src="/js/libs/foundation.min.js"></script>
+  <script src="/bundle.js"></script>
+  <!--<script src="/js/libs/foundation.min.js"></script>-->
   <script src="/js/libs/fabmo.js"></script>
-  <script src="./js/jquery.dragster.js"></script>
-  <script src="./js/moment.js"></script>
-  <script src="./js/Sortable.js"></script>
+  <!--<script src="/js/jquery.dragster.js"></script>
+  <script src="/js/moment.js"></script>
+  <script src="/js/Sortable.js"></script>-->
   <script src="./js/job_manager.js"></script>
 
 
