--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -6,7 +6,7 @@
     <title>FabMo Dashboard</title>
 
     <!-- Favicon stuff -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
+    <!--<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-icon-76x76.png">
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/foundation.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/toastr.min.css" />
+    <link rel="stylesheet" href="css/toastr.min.css" />-->
   </head>
 
   <body>
@@ -380,8 +380,6 @@
           </span>
 
           </div>
-      <script type="text/javascript" src="/js/libs/spin.min.js"></script>
-	    <script type="text/javascript" src="js/libs/require.js"></script>
-      <script type="text/javascript" src="js/app.js"></script>
+      <script type="text/javascript" src="../build/bundle.js"></script>
   </body>
 </html>
