--- a/dashboard/apps/previewer.fma/index.html
+++ b/dashboard/apps/previewer.fma/index.html
@@ -70,8 +70,9 @@
      * @param {string} gcode The G-Code to display.
      * @param {boolean} isLive Sets if the G-Code should be displayed live.
      * @param {number} jobId The job id.
+     * @param {boolean} inInch If the units are displayed in inches.
      */
-    function initializeViewer(gcode, isLive, jobId) {
+    function initializeViewer(gcode, isLive, jobId, inInch) {
       var width = window.innerWidth;
       var height = window.innerHeight - $("#topbar").height();
       $('#preview').size(width, height);
@@ -81,7 +82,8 @@
         height,
         function(msg) { fabmo.notify('warning', msg); },
         { hideGCode : true },
-        isLive
+        isLive,
+        inInch
       );
       if(gcode !== "") {
         viewer.setGCode(gcode);
@@ -92,6 +94,12 @@
       }
 
       resize();
+    }
+
+    function getUnitChoiceAndInitializeViewer(data, isLive, jobId) {
+      fabmo.requestStatus(function(err, status) {
+        initializeViewer(data, isLive, jobId, status.unit == "in");
+      });
     }
 
 // Start fixing issue with footbar display
@@ -146,15 +154,14 @@
           var url = '/job/' + args.job + '/gcode';
           $.get(url,function(data, status) {
             var isLive = ('isLive' in args) ? args.isLive : false;
-            initializeViewer(data, isLive, args.job);
+            getUnitChoiceAndInitializeViewer(data, isLive, args.job);
           });
         } else {
-          initializeViewer("", false, -1);
+          getUnitChoiceAndInitializeViewer("", false, -1);
         }
       });
 
       $(window).resize(function(){
-        console.info('resizing')
         resize();
       });
     });
