--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -134,8 +134,9 @@
 </div>
 
   <!-- Javascript inclusions -->
-  <script src="../../vendor.bundle.js"></script>
+  <script src="../../common.js"></script>
   <script src="../../app.js"></script>
+	
 
 
 </body>
