--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -135,7 +135,7 @@
 
   <!-- Javascript inclusions -->
   <script src="../../common.js"></script>
-  <script src="../../app.js"></script>
+  <script src="../../job_manager.js"></script>
 	
 
 
