authentication working previewer kinda working

--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -2,9 +2,8 @@
     <head>
         <meta charset="utf-8">
         <title>Macro Manager</title>
-        <link rel="stylesheet" href="/css/foundation.min.css">
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="../../css/dashboard.css">
+	      <link rel="stylesheet" href="./css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
@@ -40,13 +39,9 @@
                 </table>
             </div>
         </section>
-          <script src="/js/libs/jquery.min.js"></script>
-          <script src="/js/libs/foundation.min.js"></script>
-          <script src="/js/libs/fabmo.js"></script>
-          <script type="text/javascript">
-            var fabmo = new FabMoDashboard();
-          </script>
-          <script src="./js/macro_manager.js"></script>
+
+      <script src="../../common.js"></script>
+      <script src="../../macro_manager.js"></script>       
 
     </body>
 </html>
