--- a/dashboard/apps/network_manager.fma/index.html
+++ b/dashboard/apps/network_manager.fma/index.html
@@ -3,10 +3,9 @@
     <meta charset="utf-8">
     <title>Network Manager</title>
 
-    <link rel="stylesheet" href="/css/foundation.min.css">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../../css/dashboard.css">
+	    <link rel="stylesheet" href="./css/style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
     <div id="passwd-modal" class="reveal-modal medium" data-reveal>
@@ -86,53 +85,9 @@
     </section>
 
   <!-- Javascript inclusions -->
-  <script src="/js/libs/jquery.min.js"></script>
-  <script src="/js/libs/foundation.min.js"></script>
-  <script src="/js/libs/fabmo.js"></script>
-  <script src="./js/libs/moment.js"></script>
-  <script src="./js/network_manager.js"></script>
+    <script src="../../common.js"></script>
+    <script src="../../network_manager.js"></script>  
 
-
-  <script type="text/javascript">
-  var fabmo = new FabMoDashboard();
-
-  $(document).ready(function() {
-
-    //Foundation Init
-    $(document).foundation();
-
-    // Check for new networks initially, and then every 3 seconds
-    refreshWifiTable(function(err, data) {
-        if(err){
-            fabmo.notify('error',"failed to retrieve network information. Network management may not be available on your tool.");
-            return;
-        }
-        setInterval(refreshWifiTable, 3000);
-    });
-
-    refreshHistoryTable();
-
-    // Action for clicking the SSID
-    $('tbody').on('click', 'td.ssid', function () {
-        var name = $(this).text();
-        requestPassword(name, function(passwd){
-            fabmo.connectToWifi(name, passwd,function(err,data){
-                if(err) {
-                    fabmo.notify('error',err);
-                }
-            });
-        });
-    });
-
-    // Action for clicking the AP mode button
-    $('#ap-mode-button').on('click', function(evt) {
-        enterAPMode();
-        evt.preventDefault();
-    })
-
-
-});
-</script>
 
 </body>
 </html>
