--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -97,9 +97,9 @@
                         </div>
                         <div class="large-4 columns">
                             <div class="row collapse">
-                                <label>Junction Aggression</label>
+                                <label>Junction Integration Time</label>
                                 <div class="small-12 columns">
-                                    <input type="text" id="driver-ja" class="driver-input"/>
+                                    <input type="text" id="driver-jt" class="driver-input"/>
                                 </div>
                             </div>
                         </div>
@@ -1411,7 +1411,7 @@
             </div>
         </fieldset>
     </div>
-
+<!--
     <div class="row">
         <fieldset>
             <legend>Channel 5</legend>
@@ -1554,6 +1554,7 @@
         </fieldset>
     </div>
 </section>
+-->
 
 <section role="tabpanel" aria-hidden="true" class="content" id="tabpanel5">
     <div class="row">
@@ -1966,7 +1967,7 @@ $(document).ready(function() {
     $('.opensbp-input').change( function() {
         setConfig(this.id, this.value);
     });
-
+/*
     $('.opensbp-values').change( function() {
         var parts = this.id.split("-");
         var new_config = {};
@@ -1998,7 +1999,7 @@ $(document).ready(function() {
             });
         }
     });
-
+*/
     $('#input-machine-name').change( function(evt) {
         var id = {name: this.value};
         fabmo.setNetworkIdentity(id, function(err, data) {
