Fix background color issue in system apps

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body style="background-color: #ffffff;">
+<body>
   <div class="sticky">
     <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
