Some cleanup.  Improve the update indication in the configuration app

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -150,7 +150,7 @@
                         </div>
                         <div class="large-4 columns">
                             <div class="row collapse">
-                                <a id="btn-update"  class="button radius small">Update FabMo Software...</a>
+                                <a id="btn-update"  class="button radius small disabled noselect">No Updates Available!</a>
                             </div>
                         </div>
                     </fieldset>
