Hotfix for network "sandbox" issue

--- a/dashboard/apps/network_manager.fma/index.html
+++ b/dashboard/apps/network_manager.fma/index.html
@@ -11,18 +11,16 @@
 
     <div id="passwd-modal" class="reveal-modal medium" data-reveal>
     <div id="modal-title"></div>
-    <form id="passwd-form">
-        <div class="row">
-            <label for="password">Passphrase</label>
-            <input type="text" name="password" />
-        </div>
-        <div class="row">
-             <div class="right">
-                 <button type="submit" class="button radius success">Connect</button>
-             </div>
-         </div>
-     </form>
-     <a class="close-reveal-modal" id="close-password-modal">&#215;</a>
+      <div class="row">
+          <label for="password">Passphrase</label>
+          <input type="password" name="password" id="txt-password"/>
+      </div>
+      <div class="row">
+           <div class="right">
+               <button class="button radius success" id="btn-connect">Connect</button>
+           </div>
+       </div>
+       <a class="close-reveal-modal" id="close-password-modal">&#215;</a>
     </div>
 
     <div id="confirm-modal" class="reveal-modal medium" data-reveal>
@@ -130,6 +128,9 @@
         evt.preventDefault();
     })
 
+    $(document).on('opened.fndtn.reveal', '[data-reveal]', function(){
+          $('#txt-password').focus();
+    });
 
 });
 </script>
