consent form styler and working

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -322,9 +322,9 @@
               <div id="beacon_sub_container">
                 <label for="beacon_checkbox" id="beacon_checkbox_label">Check indicates consent:</label>
                 <input type="checkbox" name="beacon_checkbox" id="beacon_checkbox" checked>
-                <div id="beacon_consent_button">Proceed<div>
+                <div id="beacon_consent_button">Proceed</div>
               </div>
-            <div>
+            </div>
       <div class="newModal">
 
 
