--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -316,11 +316,11 @@
             <div id="beacon_consent_container">
               <div id="beacon_consent_inner">
                 <span id="consent_dialogue">
-                  We're working hard to improve FabMo. <br><br>Check the box to allow your tool to send non-identifying health diagnostic information to help improve performance.
+                  We're working hard to improve FabMo!<br><br>Would you like to send us non-identifying diagnostic information to help improve tool performance?
                 </span>
               </div>
               <div id="beacon_sub_container">
-                <label for="beacon_checkbox" id="beacon_checkbox_label">Check indicates consent:</label>
+                <label for="beacon_checkbox" id="beacon_checkbox_label">Yes, help improve performance:</label>
                 <input type="checkbox" name="beacon_checkbox" id="beacon_checkbox" checked>
                 <div id="beacon_consent_button">Proceed</div>
               </div>
